--- a/Tiger.Test/App.config
+++ b/Tiger.Test/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add connectionString="111333222" name="3321" providerName=""/>
+  </connectionStrings>
 </configuration>
