--- a/Tiger.Test/Tiger.Test.csproj
+++ b/Tiger.Test/Tiger.Test.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Model\Users.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
