--- a/Tiger.Test/App.config
+++ b/Tiger.Test/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add connectionString="111333222" name="3321" providerName=""/>
+    <add name="monkey" connectionString="Data Source=121.40.186.190;Initial Catalog=Monkey;User ID=sa;Password=tt$#@!123;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
