--- a/Tiger.Test/App.config
+++ b/Tiger.Test/App.config
@@ -4,6 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="monkey" connectionString="Data Source=121.40.186.190;Initial Catalog=Monkey;User ID=sa;Password=tt$#@!123;" providerName="System.Data.SqlClient" />
+    <!--sql server config-->
+    <add name="db" connectionString="Data Source=.;Initial Catalog=testdb;User ID=sa;Password=****;" providerName="System.Data.SqlClient" />
+    <!--mysql config-->
+    <add name="db" connectionString="Data Source=.;Initial Catalog=testdb;User ID=sa;Password=****;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
