--- a/Tiger.Test/App.config
+++ b/Tiger.Test/App.config
@@ -5,8 +5,8 @@
     </startup>
   <connectionStrings>
     <!--sql server config-->
-    <add name="db" connectionString="Data Source=.;Initial Catalog=testdb;User ID=sa;Password=****;" providerName="System.Data.SqlClient" />
+    <add name="monkey" connectionString="Data Source=.;Initial Catalog=testdb;User ID=sa;Password=****;" providerName="System.Data.SqlClient" />
     <!--mysql config-->
-    <add name="db" connectionString="Data Source=.;Initial Catalog=testdb;User ID=sa;Password=****;" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="db" connectionString="Data Source=.;Initial Catalog=testdb;User ID=sa;Password=****;" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
 </configuration>
