--- a/Tiger.ORM.ModelConfiguration/Tiger.ORM.ModelConfiguration.csproj
+++ b/Tiger.ORM.ModelConfiguration/Tiger.ORM.ModelConfiguration.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1B74282-DDDA-4FEB-AE35-23FB5911A0C4}</ProjectGuid>
+    <ProjectGuid>{1E6F2625-1900-4D20-AA99-657DCC8974D0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tiger.ORM.ModelConfiguration</RootNamespace>
     <AssemblyName>Tiger.ORM.ModelConfiguration</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,12 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseModelConfigAttribute.cs" />
-    <Compile Include="ColumnAttribute.cs" />
-    <Compile Include="IgnoreAttribute.cs" />
-    <Compile Include="KeyAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TableAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
