--- a/Tiger.ORM.ModelConfiguration/Tiger.ORM.ModelConfiguration.csproj
+++ b/Tiger.ORM.ModelConfiguration/Tiger.ORM.ModelConfiguration.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tiger.ORM.ModelConfiguration</RootNamespace>
     <AssemblyName>Tiger.ORM.ModelConfiguration</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,7 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attr\ColumnAttribute.cs" />
+    <Compile Include="Attr\IgnoreAttribute.cs" />
+    <Compile Include="Attr\KeyType.cs" />
+    <Compile Include="Attr\KeyAttribute.cs" />
+    <Compile Include="Attr\ModelConfigAttribute.cs" />
+    <Compile Include="Exceptions\ModelConfigException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Attr\TableAttribute.cs" />
+    <Compile Include="RelationMap.cs" />
+    <Compile Include="Relations.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
