--- a/Tiger.ORM.MSSql/Tiger.ORM.SqlServer.csproj
+++ b/Tiger.ORM.MSSql/Tiger.ORM.SqlServer.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Compile Include="Adapter\SqlAdapter.cs" />
     <Compile Include="DbContext.cs" />
+    <Compile Include="Expressions\DeleteLambda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\DataTableConvert.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tiger.ORM.ModelConfiguration\Tiger.ORM.ModelConfiguration.csproj">
